@@ -11,20 +11,19 @@ import com.google.common.base.Function;
 import com.google.protobuf.ByteString;
 import com.google.protobuf.InvalidProtocolBufferException;
 import com.google.protobuf.Message;
-import com.salesforce.apollo.choam.proto.*;
-import com.salesforce.apollo.choam.proto.SubmitResult.Result;
-import com.salesforce.apollo.cryptography.proto.PubKey;
-import com.salesforce.apollo.messaging.proto.AgedMessageOrBuilder;
 import com.salesforce.apollo.archipelago.RouterImpl.CommonCommunications;
 import com.salesforce.apollo.bloomFilters.BloomFilter;
 import com.salesforce.apollo.choam.comm.*;
 import com.salesforce.apollo.choam.fsm.Combine;
 import com.salesforce.apollo.choam.fsm.Combine.Merchantile;
+import com.salesforce.apollo.choam.proto.*;
+import com.salesforce.apollo.choam.proto.SubmitResult.Result;
 import com.salesforce.apollo.choam.support.*;
 import com.salesforce.apollo.choam.support.Bootstrapper.SynchronizedState;
 import com.salesforce.apollo.choam.support.HashedCertifiedBlock.NullBlock;
 import com.salesforce.apollo.cryptography.*;
 import com.salesforce.apollo.cryptography.Signer.SignerImpl;
+import com.salesforce.apollo.cryptography.proto.PubKey;
 import com.salesforce.apollo.membership.Context;
 import com.salesforce.apollo.membership.GroupIterator;
 import com.salesforce.apollo.membership.Member;
@@ -32,6 +31,7 @@ import com.salesforce.apollo.membership.RoundScheduler;
 import com.salesforce.apollo.membership.messaging.rbc.ReliableBroadcaster;
 import com.salesforce.apollo.membership.messaging.rbc.ReliableBroadcaster.MessageAdapter;
 import com.salesforce.apollo.membership.messaging.rbc.ReliableBroadcaster.Msg;
+import com.salesforce.apollo.messaging.proto.AgedMessageOrBuilder;
 import com.salesforce.apollo.utils.Utils;
 import io.grpc.StatusRuntimeException;
 import org.h2.mvstore.MVMap;
@@ -91,7 +91,7 @@ public class CHOAM {
     public CHOAM(Parameters params) {
         this.store = new Store(params.digestAlgorithm(), params.mvBuilder().clone().build());
         this.params = params;
-        executions = Executors.newVirtualThreadPerTaskExecutor();
+        executions = Executors.newCachedThreadPool(Thread.ofVirtual().factory());
 
         nextView();
         combine = new ReliableBroadcaster(params.context(), params.member(), params.combine(), params.communications(),
