@@ -34,13 +34,12 @@ import static com.salesforce.apollo.cryptography.QualifiedBase64.qb64;
  * @author hal.hildebrand
  */
 public class LocalServer implements RouterSupplier {
-    private final static Executor executor      = Executors.newVirtualThreadPerTaskExecutor();
-    private static final Logger   log           = LoggerFactory.getLogger(LocalServer.class);
-    private static final String   NAME_TEMPLATE = "%s-%s";
-
-    private final ClientInterceptor clientInterceptor;
-    private final Member            from;
-    private final String            prefix;
+    private static final Logger            log            = LoggerFactory.getLogger(LocalServer.class);
+    private static final String            NAME_TEMPLATE  = "%s-%s";
+    private final        Executor          clientExecutor = Executors.newCachedThreadPool(Thread.ofVirtual().factory());
+    private final        ClientInterceptor clientInterceptor;
+    private final        Member            from;
+    private final        String            prefix;
 
     public LocalServer(String prefix, Member member) {
         this.from = member;
@@ -74,7 +73,8 @@ public class LocalServer implements RouterSupplier {
             limitsBuilder.metricRegistry(limitsRegistry);
         }
         ServerBuilder<?> serverBuilder = InProcessServerBuilder.forName(name)
-                                                               .executor(executor)
+                                                               .executor(Executors.newCachedThreadPool(
+                                                               Thread.ofVirtual().factory()))
                                                                .intercept(ConcurrencyLimitServerInterceptor.newBuilder(
                                                                                                            limitsBuilder.build())
                                                                                                            .statusSupplier(
@@ -94,7 +94,7 @@ public class LocalServer implements RouterSupplier {
     private ManagedChannel connectTo(Member to) {
         final var name = String.format(NAME_TEMPLATE, prefix, qb64(to.getId()));
         final InProcessChannelBuilder builder = InProcessChannelBuilder.forName(name)
-                                                                       .executor(executor)
+                                                                       .executor(clientExecutor)
                                                                        .usePlaintext()
                                                                        .intercept(clientInterceptor);
         disableTrash(builder);
