@@ -8,18 +8,14 @@ package com.salesforce.apollo.model.demesnes;
 
 import com.google.protobuf.Any;
 import com.google.protobuf.ByteString;
-import com.salesforce.apollo.cryptography.proto.Digeste;
-import com.salesforce.apollo.demesne.proto.DemesneParameters;
-import com.salesforce.apollo.demesne.proto.SubContext;
-import com.salesforce.apollo.test.proto.ByteMessage;
-import com.salesforce.apollo.test.proto.TestItGrpc;
-import com.salesforce.apollo.test.proto.TestItGrpc.TestItBlockingStub;
-import com.salesforce.apollo.test.proto.TestItGrpc.TestItImplBase;
 import com.salesforce.apollo.archipelago.*;
 import com.salesforce.apollo.archipelago.RouterImpl.CommonCommunications;
 import com.salesforce.apollo.comm.grpc.DomainSocketServerInterceptor;
 import com.salesforce.apollo.cryptography.Digest;
 import com.salesforce.apollo.cryptography.DigestAlgorithm;
+import com.salesforce.apollo.cryptography.proto.Digeste;
+import com.salesforce.apollo.demesne.proto.DemesneParameters;
+import com.salesforce.apollo.demesne.proto.SubContext;
 import com.salesforce.apollo.membership.Member;
 import com.salesforce.apollo.membership.impl.SigningMemberImpl;
 import com.salesforce.apollo.membership.stereotomy.ControlledIdentifierMember;
@@ -38,6 +34,10 @@ import com.salesforce.apollo.stereotomy.identifier.spec.InteractionSpecification
 import com.salesforce.apollo.stereotomy.mem.MemKERL;
 import com.salesforce.apollo.stereotomy.mem.MemKeyStore;
 import com.salesforce.apollo.stereotomy.services.proto.ProtoKERLAdapter;
+import com.salesforce.apollo.test.proto.ByteMessage;
+import com.salesforce.apollo.test.proto.TestItGrpc;
+import com.salesforce.apollo.test.proto.TestItGrpc.TestItBlockingStub;
+import com.salesforce.apollo.test.proto.TestItGrpc.TestItImplBase;
 import com.salesforce.apollo.utils.Utils;
 import io.grpc.*;
 import io.grpc.ForwardingClientCall.SimpleForwardingClientCall;
@@ -76,7 +76,8 @@ import static org.junit.jupiter.api.Assertions.*;
 public class DemesneTest {
     private final static Class<? extends io.netty.channel.Channel>  clientChannelType = IMPL.getChannelType();
     private static final Class<? extends ServerDomainSocketChannel> serverChannelType = IMPL.getServerDomainSocketChannelClass();
-    private final static Executor                                   executor          = Executors.newVirtualThreadPerTaskExecutor();
+    private final static Executor                                   executor          = Executors.newCachedThreadPool(
+    Thread.ofVirtual().factory());
     private final        TestItService                              local             = new TestItService() {
 
         @Override
